# argus

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: deploy.yml
deploy/: Dockerfile  ecosystem.config.js
deploy/terraform/: .gitignore  alb.tf  dns.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  variables.tf  vpc.tf
docs/: cloud.md
docs/superpowers/plans/: 2026-04-08-argus-cloud-plan-1-foundation.md  2026-04-09-argus-cloud-plan-2-auth.md  2026-04-13-argus-cloud-plan-3-sdk-cli.md  2026-04-13-argus-cloud-plan-4-dashboard.md  2026-04-16-argus-cloud-plan-5-aws-infra.md  2026-04-23-sdk-production-readiness.md
docs/superpowers/specs/: 2026-04-08-argus-cloud-design.md  2026-04-14-user-settings-design.md  2026-04-16-argus-cloud-plan-5-aws-infra.md  2026-04-20-frontend-redesign.md  2026-04-23-sdk-production-readiness.md
examples/demo-app/: README.md  app.py  pyproject.toml  simulate.py
sdk/: README.md  pyproject.toml
sdk/argus_sdk/: __init__.py  _anthropic.py  _credentials.py  _openai.py  _reporter.py  cli.py
sdk/tests/: test_api_key.py  test_cli.py  test_patch.py  test_reporter.py
server/: go.mod  go.sum
server/cmd/: main.go
server/internal/alerts/: notifier.go  notifier_test.go
server/internal/api/: baselines.go  baselines_test.go  testhelper_test.go
server/internal/auth/: auth_handlers.go  auth_handlers_test.go  jwt.go  jwt_test.go  middleware.go  middleware_test.go  oauth_github.go  oauth_github_test.go  oauth_google.go  oauth_google_test.go  project_handlers.go  project_handlers_test.go  testhelper_test.go
server/internal/drift/: accuracy_test.go  detector.go  detector_test.go  stats.go  stats_test.go  testhelper_test.go
server/internal/ingest/: handler.go  handler_test.go  testhelper_test.go
server/internal/store/: baseline.go  baseline_test.go  db.go  drift_state.go  list.go  list_test.go  queries.go  queries_test.go  schema.sql  testcontainers_test.go  testhelper_test.go  users.go
ui/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/auth/callback/: page.tsx
ui/app/dashboard/: page.tsx
ui/app/docs/[slug]/: page.tsx
ui/app/login/: page.tsx
ui/app/settings/: page.tsx
ui/components/: DashboardDemo.tsx  Shell.tsx  refresh-button.tsx
ui/e2e/: auth-callback.spec.ts  dashboard.spec.ts  login.spec.ts  settings.spec.ts
ui/lib/: api.ts  docs.tsx  types.ts
