[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-sdk"
version = "0.1.0"
description = "Drop-in LLM behavioral drift detection"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["argus_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
