[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-sdk"
version = "0.1.3"
description = "Detect when your LLM's behavior has statistically shifted — one line of code to instrument, one Docker container to run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25",
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
argus = "argus_sdk.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["argus_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
