[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-demo-app"
version = "0.1.0"
description = "Demo app showing argus-sdk integration"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Install the local sdk in editable mode alongside this app
local = [
    "argus-sdk @ file://../../../sdk",
]

[tool.hatch.build.targets.wheel]
packages = []
